--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
 
 <p>My first paragraph.</p>
 
+<script>
+    var _cc = _cc || [];
+    _cc.push(['ci', {'sid': 'a3s8fkyk23mnfmgmm5', 'tid': 'JJJJ'}]);
+    _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
+    (function() {
+        var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
+        c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com/cc.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
+    })();
+</script>
+<noscript>
+<img src="https://staging.cdn-net.com/s1.gif?sid=a3s8fkyk23mnfmgmm5&tid=JJJJ"/>
+</noscript>
+
+<noscript>
+<img src="https://staging.cdn-net.com/s1.gif?sid=a3s8fkyk23mnfmgmm5&tid=JJJJJ">
+</noscript>
+
 </body>
 </html>
