--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     var _cc = _cc || [];
     _cc.push(['ci', {'sid': 'a3s8fkyk23mnfmgmm5','tid': 'J1234'}]);
     _cc.push(['cf', 49147]);
-    _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com"]);
+    _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
     (function () {
         var c = document.createElement('script');
         c.type = 'text/javascript';
         c.async = true;
-        c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com/cc.js";
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(c, s);
+        c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com/cc.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
     })();
 
 </script>
