--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 <script> 
 
     var _cc = _cc || [];
-    _cc.push(['ci', {'sid': 'a3s8fkyk23mnfmgmm5','tid': 'J1234'}]);
-    _cc.push(['cf', 49147]);
+    _cc.push(['ci', {'sid': 'a3s8fkyk23mnfmgmm5', 'tid': 'J1234'}]);
     _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
-    (function () {
-        var c = document.createElement('script');
-        c.type = 'text/javascript';
-        c.async = true;
+    (function() {
+        var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
         c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com/cc.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
     })();
