--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script> 
 
     var _cc = _cc || [];
-    _cc.push(['ci', {'sid': 'a3s8fkyk23mnfmgmm5', 'tid': 'J1234'}]);
+    _cc.push(['ci', {'sid': '39f085a57b3743c5bb86b7', 'tid': 'J12345'}]);
     _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
     (function() {
         var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
