update back to site-id

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script> 
 
     var _cc = _cc || [];
-    _cc.push(['ci', {'sid': '3c914828e05d48b097279ca441cd4095', 'tid': 'ActimizeTest123'}]);
+    _cc.push(['ci', {'sid': 'sample-site', 'tid': 'ActimizeTest123'}]);
     _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
     (function() {
         var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
