--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 _cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'amex_2'}]);
 _cc.push(['st', 1000]);
 _cc.push(['cf', 507899]); 
-_cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com"]);
+_cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
 (function() {
     var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
-    c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com" + '/cc.js?ts=' + (new Date()).getTime();
+    c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com' + '/cc.js?ts=' + (new Date()).getTime();
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
 })();
 function onSubmit(e) {
