--- a/index.html
+++ b/index.html
@@ -1,46 +1,24 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-    <meta contents="width=device-width, initial-scale=1.0" name="viewport">
-    <script type="text/javascript">var _cc = _cc || [];
-_cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'amex_2'}]);
-_cc.push(['st', 1000]);
-_cc.push(['cf', 507899]); 
-_cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
-(function() {
-    var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
-    c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com' + '/cc.js?ts=' + (new Date()).getTime();
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
-})();
-function onSubmit(e) {
-  e.preventDefault ? e.preventDefault() : e.returnValue = false;
-  _cc.push(['cag', function() {
-    document.getElementById("loginform").submit();
-  }]);
-}</script>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Demo</h1>
-      <form id="loginform" method="post">
-        <fieldset>
-          <legend>Enter your login information below.</legend>
-          <label>Username</label>
-          <input name="username" type="text">
-          <label>Password</label>
-          <input name="password" type="password">
-          <input name="tid" value="788f790f-8938-4efc-a5c9-fd0bb8f1b875" type="hidden">
-          <br>
-          <button class="btn" id="submitButton" onclick="onSubmit(event);" type="submit">Login</button>
-        </fieldset>
-      </form>
-      <noscript>
-        <img src="//staging.cdn-net.com/s1.gif?sid=sample-site&amp;tid=788f790f-8938-4efc-a5c9-fd0bb8f1b875">
-      </noscript>
-    </div>
-  </body>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+
+<p>My first paragraph.</p>
+
+<script> 
+
+    var _cc = _cc || [];
+    _cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'Amex123_2'}]);
+    _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com']);
+    (function() {
+        var c = document.createElement('script'); c.type = 'text/javascript'; c.async = true;
+        c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'staging.cdn-net.com/cc.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
+    })();
+
+</script>
+
+
+</body>
 </html>
