--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-comb
 var _cc = _cc || [];
 _cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': '8f8ab316-3c51-4142-8489-0e3120a60730'}]);
 _cc.push(['st', 1000]); _cc.push(['cf', 507899]);
-_cc.push(['run', ('https:' == document.location.protocol ?'https://' : 'http://') + 'staging.cdn-net.com']);
+_cc.push(['run', ('https:' == document.location.protocol ?'https://' : 'http://') + "staging.cdn-net.com"]);
 (
 
 function() {
 var c = document.createElement('script'); 
 c.type ='text/javascript'; 
 c.async = true;
-c.src = ('https:' == document.location.protocol ? 'https://' :'http://') + 'staging.cdn-net.com' + '/cc.js?ts=' + (new Date()).getTime();
+c.src = ('https:' == document.location.protocol ? 'https://' :'http://') + "staging.cdn-net.com" + '/cc.js?ts=' + (new Date()).getTime();
 var s = document.getElementsByTagName('script')[0];
 s.parentNode.insertBefore(c,s);
 })();
