--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-comb
 <meta contents="width=device-width, initial-scale=1.0" name="viewport">
 <script type="text/javascript">
 var _cc = _cc || [];
-_cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'hellojeff12345'}]);
+_cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'hellojeffXX'}]);
 _cc.push(['st', 1000]); _cc.push(['cf', 507899]);
 _cc.push(['run', ('https:' == document.location.protocol ?'https://' : 'http://') + "staging.cdn-net.com"]);
 (
@@ -25,11 +25,17 @@ var s = document.getElementsByTagName('script')[0];
 s.parentNode.insertBefore(c,s);
 })();
 
+//function onSubmit(e) {
+//e.preventDefault ? e.preventDefault() : e.returnValue = false;
+//_cc.push(['cfp', function(payload) {
+//document.getElementById("payload").value = payload;
+//document.getElementById("loginform").submit();
+//}]);
+//}
 function onSubmit(e) {
-e.preventDefault ? e.preventDefault() : e.returnValue = false;
+e.preventDefault();
 _cc.push(['cfp', function(payload) {
 document.getElementById("payload").value = payload;
-document.getElementById("loginform").submit();
 }]);
 }
 </script>
@@ -45,7 +51,7 @@ document.getElementById("loginform").submit();
 				<label>Password</label> 
 					<input id="payload" name="payload" value=""	type="hidden" />
 					 <input name="password" type="password">
-					 <input	name="tid" value="hellojeff12345"	type="hidden"> <br>
+					 <input	name="tid" value="hellojeffXX"	type="hidden"> <br>
 				<button class="btn" id="submitButton" onclick="onSubmit(event);" type="submit">Login</button>
 			</fieldset>
 		</form>
