--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 
 <link rel="stylesheet"
-href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
-<script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
 
 <meta contents="width=device-width, initial-scale=1.0" name="viewport">
@@ -25,17 +25,11 @@ var s = document.getElementsByTagName('script')[0];
 s.parentNode.insertBefore(c,s);
 })();
 
-//function onSubmit(e) {
-//e.preventDefault ? e.preventDefault() : e.returnValue = false;
-//_cc.push(['cfp', function(payload) {
-//document.getElementById("payload").value = payload;
-//document.getElementById("loginform").submit();
-//}]);
-//}
 function onSubmit(e) {
-e.preventDefault();
+e.preventDefault ? e.preventDefault() : e.returnValue = false;
 _cc.push(['cfp', function(payload) {
 document.getElementById("payload").value = payload;
+document.getElementById("loginform").submit();
 }]);
 }
 </script>
