--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function onSubmit(e) {
         </fieldset>
       </form>
       <noscript>
-        <img src="//staging.cdn-net.com/s1.gif?sid=sample-site&amp;tid=d4fa52e8-a6bd-4772-bdc8-0375cc5a88e7">
+        <img src="//staging.cdn-net.com/s1.gif?sid=0fa75ec6-a58e-407d-813f-1ba17a1036bc&amp;tid=jontest1234">
       </noscript>
     </div>
   </body>
