--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function onSubmit(e) {
   <body>
     <div class="container">
       <h1>Demo</h1>
-      <form id="loginform" method="post">
+      <form id="loginform" method="novalidate">
         <fieldset>
           <legend>Enter your login information below.</legend>
           <label>Username</label>
