--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-    <meta contents="width=device-width, initial-scale=1.0" name="viewport">
-    <script type="text/javascript">var _cc = _cc || [];
-_cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'jontest1234'}]);
+<head>
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+<meta contents="width=device-width, initial-scale=1.0" name="viewport">
+<script type="text/javascript">var _cc = _cc || [];
+_cc.push(['ci', {'sid': '0fa75ec6-a58e-407d-813f-1ba17a1036bc', 'tid': 'jontest12345'}]);
 _cc.push(['st', 1000]);
 _cc.push(['cf', 507899]); 
 _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com"]);
@@ -16,31 +16,38 @@ _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(c, s);
 })();
 function onSubmit(e) {
-  e.preventDefault ? e.preventDefault() : e.returnValue = false;
-  _cc.push(['cag', function() {
-    document.getElementById("loginform").submit();
-  }]);
-}</script>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Demo</h1>
-      <form id="loginform" method="novalidate">
+    e.preventDefault ? e.preventDefault() : e.returnValue = false;
+    _cc.push(['cag', function() {
+        showThankYou();
+    }]);
+}
+function showThankYou(){
+    $('#loginform').hide();
+    $('#thankYou').show();
+}
+</script>
+</head>
+<body>
+<div class="container">
+    <h1>Demo</h1>
+    <form id="loginform" method="post">
         <fieldset>
-          <legend>Enter your login information below.</legend>
-          <label>Username</label>
-          <input name="username" type="text">
-          <label>Password</label>
-          <input name="password" type="password">
-          <input name="tid" value="jontest1234" type="hidden">
-          <br>
-          <button class="btn" id="submitButton" onclick="onSubmit(event);" type="submit">Login</button>
+            <legend>Enter your login information below.</legend>
+            <label>Username</label>
+            <input name="username" type="text">
+            <label>Password</label>
+            <input name="password" type="password">
+            <input name="tid" value="jontest12345" type="hidden">
+            <br>
+            <button class="btn" id="submitButton" onclick="onSubmit(event);" type="submit">Login</button>
         </fieldset>
-      </form>
-      <noscript>
-        <img src="https://staging.cdn-net.com/s1.gif?sid=0fa75ec6-a58e-407d-813f-1ba17a1036bc&amp;tid=jontest1234">
-      </noscript>
+    </form>
+    <noscript>
+        <img src="https://staging.cdn-net.com/s1.gif?sid=0fa75ec6-a58e-407d-813f-1ba17a1036bc&amp;tid=jontest12345">
+    </noscript>
+    <div id="thankYou" style="display:none;">
+        <p>You are now being logged in...</p>
     </div>
-  </body>
+</div>
+</body>
 </html>
-
