--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function showThankYou(){
         <img src="https://staging.cdn-net.com/s1.gif?sid=0fa75ec6-a58e-407d-813f-1ba17a1036bc&amp;tid=jontest12345">
     </noscript>
     <div id="thankYou" style="display:none;">
-        <p>You are now being logged in...</p>
+        <p>Collection completed</p>
     </div>
 </div>
 </body>
