--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 <meta contents="width=device-width, initial-scale=1.0" name="viewport">
 <script type="text/javascript">var _cc = _cc || [];
-_cc.push(['ci', {'sid': 'sample-site', 'tid': 'transaction-id'}]);
+_cc.push(['ci', {'sid': 'sample-site', 'tid': 'testtesttesttest'}]);
 _cc.push(['st', 1000]);
 _cc.push(['cf', 507899]);
 _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com"]);
