--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 <meta contents="width=device-width, initial-scale=1.0" name="viewport">
 <script type="text/javascript">var _cc = _cc || [];
-_cc.push(['ci', {'sid': 'abcdef123', 'tid': 'testtesttesttest'}]);
+_cc.push(['ci', {'sid': '39f085a57b3743c5bb86b7', 'tid': 'testtesttesttest'}]);
 _cc.push(['st', 1000]);
 _cc.push(['cf', 507899]);
 _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com"]);
@@ -43,7 +43,7 @@ function showThankYou(){
         </fieldset>
     </form>
     <noscript>
-        <img src="https://staging.cdn-net.com/s1.gif?sid=abcdef123e&amp;tid=testtesttesttest">
+        <img src="https://staging.cdn-net.com/s1.gif?sid=39f085a57b3743c5bb86b7&amp;tid=testtesttesttest">
     </noscript>
     <div id="thankYou" style="display:none;">
         <p>Collection completed</p>
