--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 <meta contents="width=device-width, initial-scale=1.0" name="viewport">
 <script type="text/javascript">var _cc = _cc || [];
-_cc.push(['ci', {'sid': 'sample-site', 'tid': 'test_customci3','site':'1234','UserType':'123891l','TransType':'093lf9sdf'}]);
+_cc.push(['ci', {'sid': '3c914828e05d48b097279ca441cd4095', 'tid': 'inauthTest11','site':'1234','UserType':'123891l','TransType':'093lf9sdf'}]);
 _cc.push(['st', 1000]);
 _cc.push(['cf', 507899]);
 _cc.push(['run', ('https:' == document.location.protocol ? 'https://' : 'http://') + "staging.cdn-net.com"]);
@@ -43,7 +43,7 @@ function showThankYou(){
         </fieldset>
     </form>
     <noscript>
-        <img src="https://staging.cdn-net.com/s1.gif?sid=sample-site&amp;tid=test_customci3">
+        <img src="https://staging.cdn-net.com/s1.gif?sid=3c914828e05d48b097279ca441cd4095&amp;tid=inauthTest11">
     </noscript>
     <div id="thankYou" style="display:none;">
         <p>Collection completed</p>
