--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ var _cc = _cc || [];
 var ustr = Math.random().toString();
 var udat = new Date();
 var utid = ustr.substr(2,5) + udat.getTime() + ustr.substr(7,3);
-$("#MyEdit").html(utid);
+alert(utid);
 _cc.push(['ci', {'sid': '60bbc635cbe945778f4c2e62ecb251ab', 'tid': utid}]);
 _cc.push(['st', 1000]);
 _cc.push(['cf', 507899]);
@@ -54,9 +54,7 @@ function showThankYou(){
     </noscript>
     <div id="thankYou" style="display:none;">
         <p>Collection completed</p>
-        <div id="MyEdit">
-          This text will change
-        </div>
+
     </div>
 </div>
 </body>
